--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGO_URI=mongodb+srv://yuldashevrozalibek1:YF3gXkTjTwfqsx66@cluster0.a2h55sl.mongodb.net/crm-demo?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
+FRONTEND_URL=http://localhost:3000
